@@ -8446,6 +8446,7 @@ public class CMGenEditor extends StdLibrary implements GenericEditor
 			genAgingChart(mob,me,++showNumber,showFlag);
 			promptStatBool(mob,me,++showNumber,showFlag,"Never create corpse","BODYKILL");
 			promptStatBool(mob,me,++showNumber,showFlag,"Rideable Player","CANRIDE");
+			promptStatInt(mob, me, ++showNumber, showFlag, "XP Adjustment %", "XPADJ");
 			genPStats(mob,me,++showNumber,showFlag);
 			genAStats(mob,me,"ASTATS","CharStat Adjustments",++showNumber,showFlag);
 			genAStats(mob,me,"CSTATS","CharStat Settings",++showNumber,showFlag);
