@@ -5649,6 +5649,11 @@ death occurs -- it leaves no body behind.</td>
 using this race are rideable.</td>
     </tr>
     <tr>
+      <td><span style="font-style: italic;">XP Adjustment Pct</span></td>
+      <td>the amount to adjust gained and lost experience by, as a
+percentage of the experience, + or -</td>
+    </tr>
+    <tr>
       <td><em>PhysStat
 Adjustments</em></td>
       <td>adjustments, positive or
